--- a/about.html
+++ b/about.html
@@ -26,6 +26,39 @@
     .content-section {
       margin: 20px 0;
     }
+    .hero {
+      background: linear-gradient(to right, #1e1e2f, #373750);
+      color: white;
+      text-align: center;
+      padding: 60px 20px;
+    }
+    .hero h1 {
+      font-size: 3rem;
+      font-weight: bold;
+    }
+    .hero p {
+      font-size: 1.2rem;
+      margin: 20px 0;
+    }
+    .team-member {
+      text-align: center;
+      margin-bottom: 30px;
+    }
+    .team-member img {
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      background-color: #ccc;
+      margin-bottom: 15px;
+    }
+    .team-member h4 {
+      font-size: 1.2rem;
+      margin-bottom: 5px;
+    }
+    .team-member p {
+      font-size: 1rem;
+      color: #555;
+    }
 footer {
         background-color: #000000;
         color: white;
@@ -115,52 +148,41 @@ footer {
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
-
   <!-- Hero Section -->
-  <div class="hero-section">
-    <h1>About Falco</h1>
+  <section class="hero">
+    <h1>About Falcom4n & Falco Team</h1>
     <p>Learn about Falco's implementation, security metrics, and how it helps mitigate risks within your organization.</p>
-  </div>
+  </section>
 
-  <!-- Content Section -->
-  <div class="container">
-    <div class="content-section">
-      <h2>What is Falco?</h2>
-      <p>
-        Falco is the open-source cloud-native runtime security project originally created by Sysdig.
-        It monitors and detects anomalous activity in applications, containers, and infrastructure in real-time.
-      </p>
-    </div>
-    <div class="content-section">
-      <h2>Implementation at Our Organization</h2>
-      <p>
-        At our organization, Falco is integrated as a cornerstone of our security posture. It is deployed across 
-        our Kubernetes clusters and integrated with CI/CD pipelines to ensure compliance and detect unauthorized behaviors.
-      </p>
-    </div>
-    <div class="content-section">
-      <h2>Key Metrics</h2>
-      <ul>
-        <li><strong>Detection Coverage:</strong> Over 95% of known threats detected in real-time.</li>
-        <li><strong>False Positive Rate:</strong> Less than 5%, minimizing operational noise.</li>
-        <li><strong>Automated Responses:</strong> 85% of incidents automatically mitigated through Falco rules.</li>
-      </ul>
-    </div>
-    <div class="content-section">
-      <h2>Mitigated Security Risks</h2>
-      <p>
-        Falco helps mitigate various security risks, including:
-      </p>
-      <ul>
-        <li>Unauthorized container executions.</li>
-        <li>Privilege escalations within containers.</li>
-        <li>Access to sensitive files and configurations.</li>
-        <li>Suspicious network activities and process executions.</li>
-      </ul>
-      <p>
-        By integrating Falco, our organization has significantly reduced the likelihood of breaches 
-        and improved our incident response capabilities.
-      </p>
+  <!-- About Falco Team Section -->
+  <div class="container my-5">
+    <h2 class="text-center mb-4">Meet the Falco Team</h2>
+    <div class="row">
+      <div class="col-md-4 offset-md-1 team-member">
+        <img src="https://via.placeholder.com/150" alt="Team Member">
+        <h4>Jane Doe</h4>
+        <p>Security Analyst</p>
+      </div>
+      <div class="col-md-4 team-member">
+        <img src="https://via.placeholder.com/150" alt="Team Member">
+        <h4>John Smith</h4>
+        <p>DevOps Engineer</p>
+      </div>
+      <div class="col-md-4 offset-md-1 team-member">
+        <img src="https://via.placeholder.com/150" alt="Team Member">
+        <h4>Emily Davis</h4>
+        <p>Software Developer</p>
+      </div>
+      <div class="col-md-4 team-member">
+        <img src="https://via.placeholder.com/150" alt="Team Member">
+        <h4>Michael Brown</h4>
+        <p>Cloud Architect</p>
+      </div>
+      <div class="col-md-4 offset-md-4 team-member">
+        <img src="https://via.placeholder.com/150" alt="Team Member">
+        <h4>Sarah Wilson</h4>
+        <p>Product Manager</p>
+      </div>
     </div>
   </div>
 
@@ -171,3 +193,5 @@ footer {
     <p>&copy; 2024</p>
 </footer>
 </html>
+
+
