improvements in home

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <div class="row text-center">
       <div class="col-md-6">
         <div class="category">
-          <img src="icons/rules-icon.png" alt="Rules Icon">
+          <img src="assets/rules2-icon.png" alt="Rules Icon">
           <h2>Rules</h2>
           <p>Explore and customize rules to detect and respond to suspicious activities.</p>
           <a href="rules/community-rules.html">Learn More</a>
@@ -170,7 +170,7 @@
       </div>
       <div class="col-md-6">
         <div class="category">
-          <img src="icons/metrics-icon.png" alt="Metrics Icon">
+          <img src="assets/metrics-icon.png" alt="Metrics Icon">
           <h2>Metrics</h2>
           <p>Monitor critical metrics to ensure the runtime security of your environment.</p>
           <a href="metrics/statistics.html">Learn More</a>
@@ -178,7 +178,7 @@
       </div>
       <div class="col-md-6 mt-4">
         <div class="category">
-          <img src="icons/security-icon.png" alt="Security Icon">
+          <img src="assets/cyber-icon.png" alt="Security Icon">
           <h2>Security</h2>
           <p>Learn about threats, bypasses, and challenges to secure your system.</p>
           <a href="security/threats.html">Learn More</a>
@@ -186,7 +186,7 @@
       </div>
       <div class="col-md-6 mt-4">
         <div class="category">
-          <img src="icons/workshop-icon.png" alt="Workshop Icon">
+          <img src="assets/workshop-icon.png" alt="Workshop Icon">
           <h2>Workshops</h2>
           <p>Join our workshops to deepen your knowledge of Falco's capabilities.</p>
           <a href="security/workshop.html">Learn More</a>
