--- a/security/workshop.html
+++ b/security/workshop.html
@@ -147,12 +147,12 @@ footer {
     <h2 class="text-center mb-4">Security Scenarios detected by Falco</h2>
     <div class="row">
       <div class="col-md-4 scenario">
-        <img src="https://via.placeholder.com/400x300" alt="Scenario 1">
+        <img src="../assets/malware.webp" alt="Scenario 1">
         <h4>Rootkit infection detection</h4>
         <p>Detects when sensitive files are accessed outside normal operations.</p>
       </div>
       <div class="col-md-4 scenario">
-        <img src="https://via.placeholder.com/400x300" alt="Scenario 2">
+        <img src="../assets/privilegeEscalation.webp" alt="Scenario 2">
         <h4>Privilege Escalation on hunting activities</h4>
         <p>Identifies attempts to break out of the container environment.</p>
       </div>
