Falc0 4 amplify test

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h1>Protecting M3l1 Kubernetes Workloads with Falco
+    <h1>Protecting M3l1 Kubernetes Workloads with Falc0
     </h1>
     <p>Falco Runtime Security: The ultimate solution for monitoring, detecting, and responding to suspicious activity in Kubernetes environments.</p>
   </section>
