--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -1700,10 +1700,10 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 33 -->
 <div class="rule">
-    <img src="../assets/process-name-detection.svg" alt="Imagen de Regla 33">
+    <img src="../assets/chattr.webp" alt="Imagen de Regla 33">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule33')">
-            Rule 33: Random 33 [custom]
+            Rule 33: File Made inmutable inside a container [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
@@ -1716,7 +1716,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="desc33">
-                Identifies anomalies in process names that could indicate malicious activity or unauthorized access attempts.
+                Detects the use of chattr +i or chattr -i commands, which are often used by threat actors to make files immutable for persistence or to prevent tampering.
             </div>
 
             <div class="sub-section" onclick="toggleSubDetail('pertinencia33')">
@@ -1726,26 +1726,28 @@ This rule helps detect privilege escalation attempts within containerized enviro
                 </span>
             </div>
             <div class="sub-detail" id="pertinencia33">
-                Monitoring for unexpected process names is critical for detecting potential intrusions in container environments.
+                detecting the use of chattr to set immutable flags is crucial for identifying attempts to lock down critical files or system configurations, which could be used by attackers to maintain persistence or evade detection. This rule helps ensure the integrity of containers and prevent unauthorized modifications that could compromise the security of the entire cluster.
             </div>
 
             <div class="sub-section">
-                <strong>Environment:</strong> Production
+                <strong>Environment:</strong> Development
             </div>
             <div class="sub-section">
                 <strong>Rule status:</strong>
                 <div class="progress">
                     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" 
-                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">
-                        85%
+                         aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                        90%
                     </div>
                 </div>
             </div>
             <div class="sub-section">
                 <strong>Tags:</strong>
-                <span class="badge bg-secondary me-2">process_monitoring</span>
-                <span class="badge bg-secondary">anomaly_detection</span>
-                <span class="badge bg-secondary">security</span>
+                <span class="badge bg-secondary me-2">host</span>
+                <span class="badge bg-secondary">container</span>
+                <span class="badge me-2" style="background-color: #17a2b8; color: white;">process</span>
+                <span class="badge me-2" style="background-color: #fd7e14; color: white;">mitre_defense_evasion</span>
+                <span class="badge bg-secondary me-2">mitre_execution</span>
             </div>
         </div>
     </div>
@@ -1756,7 +1758,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
     <img src="../assets/process-name-detection.svg" alt="Imagen de Regla 34">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule34')">
-            Rule 34: Random 34 [custom]
+            Rule 34: Memory Swap modification [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
