Suspicious memory grep activity

--- a/rules/custom-rules.html
+++ b/rules/custom-rules.html
@@ -1757,7 +1757,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 34 -->
 <div class="rule">
-    <img src="../assets/process-name-detection.svg" alt="Imagen de Regla 34">
+    <img src="../assets/memory_swap.jpeg" alt="Imagen de Regla 34">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule34')">
             Rule 34: Memory Swap modification [custom]
@@ -1867,10 +1867,10 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 36 -->
 <div class="rule">
-    <img src="../assets/process-name-detection.svg" alt="Imagen de Regla 36">
+    <img src="../assets/bitcoin--crypto-currencies-freepik.jpg" alt="Imagen de Regla 36">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule36')">
-            Rule 36: Random 36 [custom]
+            Rule 36: Suspicious Mining Process Creation Event [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
@@ -1922,10 +1922,10 @@ This rule helps detect privilege escalation attempts within containerized enviro
 
 <!-- Rule 37 -->
 <div class="rule">
-    <img src="../assets/process-name-detection.svg" alt="Imagen de Regla 37">
+    <img src="../assets/grep-command-tips.png" alt="Imagen de Regla 37">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule37')">
-            Rule 37: Random 37 [custom]
+            Rule 37: Suspicious Memory Grep activity [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
@@ -1952,7 +1952,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
             </div>
 
             <div class="sub-section">
-                <strong>Environment:</strong> Production
+                <strong>Environment:</strong> Development
             </div>
             <div class="sub-section">
                 <strong>Rule status:</strong>
@@ -1978,7 +1978,7 @@ This rule helps detect privilege escalation attempts within containerized enviro
     <img src="../index2.html.txt" alt="Imagen de Regla 38">
     <div class="rule-content">
         <div class="rule-summary" onclick="toggleDetail('rule38')">
-            Rule 38: Random 38 [custom]
+            Rule 38: Interactive Terminal Spawned via trin|python [custom]
             <span class="info-icon" onclick="event.stopPropagation()">ℹ
                 <span class="tooltip">Haz clic para desplegar más información</span>
             </span>
